--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>I am a graduate student in Department of computing Science at Simon Fraser University,Canada  pursuing masters in Big data Program.  I did my undergrad in Computer Science from guru Gobing sing Indraprastha University, India. Apart from programming, I enjoy  playing Volleyball and Table tennis in my leisure time. I am self-taught guitar player who enjoys strumming occasionally and likes to listen to classical Indian rock fusion.</p>
+                            <p>I am a graduate student in Department of computing Science at Simon Fraser University,Canada  pursuing masters in Big data Program.  I did my undergrad in Computer Science from guru Gobind Singh Indraprastha University, India. Apart from programming, I enjoy  playing Volleyball and Table tennis in my leisure time. I am self-taught guitar player who enjoys strumming occasionally and likes to listen to classical Indian rock fusion.</p>
 
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -156,18 +156,26 @@
                     <div class="section-inner">
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
-                            <div class="item">
-                                <h3 class="title">Co-Founder & Lead Developer - <span class="place"><a href="#">Startup Hub</a></span> <span class="year">(2014 - Present)</span></h3>
-                                <p>Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.</p>
+                        	<div class="item">
+							 	<h3 class="title">Big Data Engineer <span class="place"><a href="#">Samsung Electronics Canada</a></span> <span class="year">(2016 - 2017)</span></h3>
+							    <p> </p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title">Software Engineer - <span class="place"><a href="#">Google</a></span> <span class="year">(2013 - 2014)</span></h3>
-                                <p>Vivamus a tortor eu turpis pharetra consequat quis non metus. Aliquam aliquam, orci eu suscipit pellentesque, mauris dui tincidunt enim. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.</p>
+                                <h3 class="title">Data Scientist <span class="place"><a href="#">PHEMI Systems</a></span> <span class="year">(2016 - 2017)</span></h3>
+                                 <p>Used Apache Zeppelin to train an unsupervised model for topic modeling using Spark’s Latent Drichlet allocation (LDA) model on a set of documents to infer most talked about topics and thereafter doing document search</p>
+								 <p>Worked on a Document simlilarity model using python’s NLTK library to find the document which is closest given a document using cosine similarity and finding the subject matter</p>
+								 <p>Working on sentiment analysis of big corpus of emails using NLTK and Stanfords NLP libraries</p>
+								 <p>	Optimizing existing code to handle Big Data efficiently by understanding how data structures are implemented</p>
+							    <p>Applying pyspark and scala spark best practices while working with spark programs</p>
+                            </div><!--//item-->
+                            <div class="item">
+                                <h3 class="title">Senior Software Engineer - <span class="place"><a href="#">Infosys</a></span> <span class="year">(2013 - 2015)</span></h3>
+                                <p>Enhancing application modules in C/C++ with implementtion on UNIX environment.	Played a key role in deploying new enhancements as per the business requirements. 	Determining bottlenecks and proposing relevant course of action. 	Co-ordinted with multiple teams and steering various change implementations to completion successfully.</p>
                             </div><!--//item-->
 
                             <div class="item">
-                                <h3 class="title">Software Engineer - <span class="place"><a href="#">eBay</a></span> <span class="year">(2012 - 2013)</span></h3>
-                                <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.</p>
+                                <h3 class="title">Software Engineer - <span class="place"><a href="#">Infosys</a></span> <span class="year">(2011 - 2013)</span></h3>
+                                <p>Developing perl and shell Scripts for automation of application healthchecks. Providing pre-implementation, application maintenance and enhancement support to the client with regard to product/software application</p>
                             </div><!--//item-->
 
                         </div><!--//content-->
@@ -179,6 +187,7 @@
                         <p>You can embed your GitHub activities using Casey Scarborough's <a href="http://caseyscarborough.com/projects/github-activity/" target="_blank">GitHub Activity Stream</a> widget.
                         <!--//Usage: http://caseyscarborough.com/projects/github-activity/ -->
                         <div id="ghfeed" class="ghfeed">
+                        GitHubActivity.ghfeed({ username: "BandeepSingh", selector: "#ghfeed" });
                         </div><!--//ghfeed-->
 
                     </div><!--//secton-inner-->
