--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
                         <h2 class="heading">My GitHub</h2>
                         <p>You can embed your GitHub activities using Casey Scarborough's <a href="http://caseyscarborough.com/projects/github-activity/" target="_blank">GitHub Activity Stream</a> widget.
                         <!--//Usage: http://caseyscarborough.com/projects/github-activity/ -->
-                        <div id="ghfeed" class="ghfeed">
-                        GitHubActivity.ghfeed({ username: "BandeepSingh", selector: "#ghfeed" });
+                        <div id="feed" class="feed">
+                        GitHubActivity.feed({ username: "BandeepSingh", selector: "#feed" });
                         </div><!--//ghfeed-->
 
                     </div><!--//secton-inner-->
