Added quote of the day

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
     <title>Bandeep Singh</title>
-<<<<<<< HEAD
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -306,29 +305,13 @@
 
                 <aside class="blog aside section">
                     <div class="section-inner">
-                        <h2 class="heading">Latest Blog Posts</h2>
-                        <p>You can use Sascha Depold's <a href="https://github.com/sdepold/jquery-rss" target="_blank">jQuery RSS plugin</a> to pull in your blog post feeds.</p>
+                        <h2 class="heading">Quote of the Day</h2>
+                        <p>sooner or later the man who wins Is the one who thinks he can..</p>
                         <div id="rss-feeds" class="content">
 
                         </div><!--//content-->
                     </div><!--//section-inner-->
                 </aside><!--//section-->
-
-                <aside class="list music aside section">
-                    <div class="section-inner">
-                        <h2 class="heading">Getting Bored !! listen to these gems</h2>
-                        <div class="content">
-                            <ul class="list-unstyled">
-                                <li><i class="fa fa-headphones"></i> <a href="#">Etiam hendrerit urna nunc</a></li>
-                                <li><i class="fa fa-headphones"></i> <a href="#">Ut sollicitudin in mauris non auctor</a></li>
-                                <li><i class="fa fa-headphones"></i> <a href="#">Etiam hendrerit urna nunc</a></li>
-                                <li><i class="fa fa-headphones"></i> <a href="#">Duis et felis bibendum</a></li>
-                            </ul>
-                        </div><!--//content-->
-                    </div><!--//section-inner-->
-                </aside><!--//section-->
-
-
 
 
             </div><!--//secondary-->
