--- a/index.html
+++ b/index.html
@@ -257,12 +257,12 @@
                         <div class="content">
                             <div class="item">
                                 <blockquote class="quote">
-                                    <p><i class="fa fa-quote-left"></i>James is an excellent software engineer and he is passionate about what he does. You can totally count on him to deliver your projects!</p>
+                                    <p><i class="fa fa-quote-left"></i>He is not just a team member, he had been that essential contributor who often provides simple solutions to complex problems</p>
                                 </blockquote>
-                                <p class="source"><span class="name">Tim Adams</span><br /><span class="title">Curabitur commodo</span></p>
+                                <p class="source"><span class="name">Santosh Hiremath</span><br /><span class="title">Technical Architect</span></p>
                             </div><!--//item-->
 
-                            <p><a class="more-link" href="#"><i class="fa fa-external-link"></i> More on Linkedin</a></p>
+                            <p><a class="more-link" href="https://www.linkedin.com/in/bandeep-singh-7299a224/"><i class="fa fa-external-link"></i> More on Linkedin</a></p>
 
                         </div><!--//content-->
                     </div><!--//section-inner-->
