Added new project feature image and updated featured project

--- a/index.html
+++ b/index.html
@@ -40,11 +40,8 @@
                 <h1 class="name">Bandeep Singh</h1>
                 <h2 class="desc">Programmer, Data Science Enthusiast</h2>
                 <ul class="social list-inline">
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="#"><i class="fa fa-github-alt"></i></a></li>
-                    <li class="last-item"><a href="#"><i class="fa fa-hacker-news"></i></a></li>
+                    <li><a href="https://ca.linkedin.com/in/bandeep-singh-7299a224"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://github.com/BandeepSingh"><i class="fa fa-github-alt"></i></a></li>
                 </ul>
             </div><!--//profile-->
             <a class="btn btn-cta-primary pull-right" href="http://themes.3rdwavemedia.com/" target="_blank"><i class="fa fa-paper-plane"></i> Contact Me</a>
@@ -70,10 +67,10 @@
                         <div class="content">
 
                             <div class="item featured text-center">
-                                <h3 class="title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-products-velocity/" target="_blank">KickStarter - Velocity</a></h3>
-                                <p class="summary">A responsive Bootstrap template designed for digital products</p>
+                                <h3 class="title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-products-velocity/" target="_blank">How Safe is Chicago?</a></h3>
+                                <p class="summary">Predictive Analysis of Crime Scenario in Chicago</p>
                                 <div class="featured-image">
-                                    <a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-products-velocity/" target="_blank">
+                                    <a href="https://public.tableau.com/profile/city.of.chicago.crime.analysis#!/" target="https://public.tableau.com/profile/city.of.chicago.crime.analysis#!/">
                                     <img class="img-responsive project-image" src="assets/images/projects/project-featured.png" alt="project name" />
                                     </a>
                                     <div class="ribbon">
@@ -82,8 +79,8 @@
                                     </div>
 
                                 <div class="desc text-left">
-                                    <p>You can promote your main project here. Suspendisse in tellus dolor. Vivamus a tortor eu turpis pharetra consequat quis non metus. Aliquam aliquam, orci eu suscipit pellentesque, mauris dui tincidunt enim, eget iaculis ante dolor non turpis.</p>
-                                    <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. At vero eos et accusamus et iusto odio dignissimos ducimus.</p>
+                                    <p>Global urban population is expected to rise to 66% from 30% by the year 2050. As the population is increasing, the urban cities are leveraging trend analysis to gain advantage over crime patterns. Crime costs the average US tax payer $3257.20 per year [1]. In this project, we have endeavored to do predictive and business analytics on the City of Chicago’s crime data. The aim of this project is to propose system improvements, which could in turn lead to improving economic conditions for the communities.</p>
+
                                 </div><!--//desc-->
 
                             </div><!--//item-->
@@ -164,7 +161,7 @@
                                  <p>Used Apache Zeppelin to train an unsupervised model for topic modeling using Spark’s Latent Drichlet allocation (LDA) model on a set of documents to infer most talked about topics and thereafter doing document search</p>
 								 <p>Worked on a Document simlilarity model using python’s NLTK library to find the document which is closest given a document using cosine similarity and finding the subject matter</p>
 								 <p>Working on sentiment analysis of big corpus of emails using NLTK and Stanfords NLP libraries</p>
-								 <p>	Optimizing existing code to handle Big Data efficiently by understanding how data structures are implemented</p>
+								 <p>Optimizing existing code to handle Big Data efficiently by understanding how data structures are implemented</p>
 							    <p>Applying pyspark and scala spark best practices while working with spark programs</p>
                             </div><!--//item-->
                             <div class="item">
