Updated project summaries

--- a/index.html
+++ b/index.html
@@ -90,9 +90,10 @@
                                 <img class="img-responsive project-image" src="assets/images/projects/project-5.png" alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
-                                    <h3 class="title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-mobile-apps-atom/" target="_blank">Analysis on Million Songs dataset</a></h3>
-                                    <p>You can put one of your secondary projects here. Suspendisse in tellus dolor. Vivamus a tortor eu turpis pharetra consequat quis non metus. Aliquam aliquam, orci eu suscipit pellentesque, mauris dui tincidunt enim, eget iaculis ante dolor non turpis.</p>
-                                    <p><a class="more-link" href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-mobile-apps-atom/" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
+                                    <h3 class="title"><a href="https://github.com/BandeepSingh/Million-Song-DataSet-Analysis" target="_blank">Analysis on Million Songs dataset</a></h3>
+                                    <p>Music is not just a everyday thing, it’s a part of our life. Today, we have hundreds of thousands songs to choose from and that in itself is a challenge. Music is one field that has been unexplored when we talk about Big data.</p>
+									<p>In our case study, we will endeavor to find out the various aspects of songs which makes it stand out from the rest. We are trying to classify songs based on some of the interesting features like genre, energy, Danceability and several other cool features.</p>
+                                    <p><a class="more-link" href="https://github.com/BandeepSingh/Million-Song-DataSet-Analysis" target="https://github.com/BandeepSingh/Million-Song-DataSet-Analysis"><i class="fa fa-external-link"></i> Find out more</a></p>
                                 </div><!--//desc-->
                             </div><!--//item-->
 
@@ -101,9 +102,10 @@
                                 <img class="img-responsive project-image" src="assets/images/projects/project-4.png" alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
-                                    <h3 class="title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-web-development-agencies-devstudio/" target="_blank">Online News Popularity Prediction Model</a></h3>
-                                    <p>You can put one of your secondary projects here. Suspendisse in tellus dolor. Vivamus a tortor eu turpis pharetra consequat quis non metus. Aliquam aliquam, orci eu suscipit pellentesque, mauris dui tincidunt enim, eget iaculis ante dolor non turpis.</p>
-                                    <p><a class="more-link" href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-web-development-agencies-devstudio/" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
+                                    <h3 class="title"><a href="#" target="_blank">Online News Popularity Prediction Model</a></h3>
+                                    <p>Historically news media has been the most popular means of advertisement for various business sectors. In modern days, with the advent of internet, the trend has started shifting towards digital media and with increasing internet enabled devices there has been a drift of people moving towards these new age devices for their daily dose of news.</p>
+                                    <p>The focus of our project is to build a model which predicts how much popularity in terms of share counts the news will get, and whether that news article will become popular on these social media websites or not.</p>
+                                    <p><a class="more-link" href="#" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
                                 </div><!--//desc-->
                             </div><!--//item-->
 
@@ -112,9 +114,9 @@
                                 <img class="img-responsive project-image" src="assets/images/projects/project-2.png" alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
-                                    <h3 class="title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-mobile-apps-delta/" target="_blank">CommonWealth Guide</a></h3>
-                                    <p> You can put one of your secondary projects here. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.</p>
-                                    <p><a class="more-link" href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-mobile-apps-delta/" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
+                                    <h3 class="title"><a href="#" target="_blank">CommonWealth Guide</a></h3>
+                                    <p> This application will help language barrier faced by tourists and improve the traveling experience of the tourists.</p>
+                                    <p><a class="more-link" href="#" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
                                 </div><!--//desc-->
                             </div><!--//item-->
 
@@ -255,25 +257,7 @@
                     </div><!--//section-inner-->
                 </aside><!--//section-->
 
-                <aside class="languages aside section">
-                    <div class="section-inner">
-                        <h2 class="heading">Languages</h2>
-                        <div class="content">
-                            <ul class="list-unstyled">
-                                <li class="item">
-                                    <span class="title"><strong>English:</strong></span>
-                                    <span class="level">Native Speaker <br class="visible-xs"/><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> </span>
-                                </li><!--//item-->
-                                <li class="item">
-                                    <span class="title"><strong>Spanish:</strong></span>
-                                    <span class="level">Professional Proficiency <br class="visible-sm visible-xs"/><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star-half"></i></span>
-                                </li><!--//item-->
-                            </ul>
-                        </div><!--//content-->
-                    </div><!--//section-inner-->
-                </aside><!--//section-->
-
-                <aside class="blog aside section">
+                <aside class="Quote aside section">
                     <div class="section-inner">
                         <h2 class="heading">Quote of the Day</h2>
                         <p>sooner or later the man who wins Is the one who thinks he can..</p>
