Fixed typos and added new skill

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                                     </div>
 
                                 <div class="desc text-left">
-                                    <p>Global urban population is expected to rise to 66% from 30% by the year 2050. As the population is increasing, the urban cities are leveraging trend analysis to gain advantage over crime patterns. Crime costs the average US tax payer $3257.20 per year [1]. In this project, we have endeavored to do predictive and business analytics on the City of Chicago’s crime data. The aim of this project is to propose system improvements, which could in turn lead to improving economic conditions for the communities.</p>
+                                    <p>Global urban population is expected to rise to 66% from 30% by the year 2050. As the population is increasing, the urban cities are leveraging trend analysis to gain advantage over crime patterns. Crime costs the average US tax payer $3257.20 per year. In this project, we have endeavored to do predictive and business analytics on the City of Chicago crime data.</p>
+                                    <p>The aim of this project is to propose system improvements, which could in turn lead to improving economic conditions for the communities.</p>
 
                                 </div><!--//desc-->
 
@@ -91,7 +92,7 @@
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title"><a href="https://github.com/BandeepSingh/Million-Song-DataSet-Analysis" target="_blank">Analysis on Million Songs dataset</a></h3>
-                                    <p>Music is not just a everyday thing, it’s a part of our life. Today, we have hundreds of thousands songs to choose from and that in itself is a challenge. Music is one field that has been unexplored when we talk about Big data.</p>
+                                    <p>Music is not just a everyday thing, it's a part of our life. Today, we have hundreds of thousands songs to choose from and that in itself is a challenge. Music is one field that has been unexplored when we talk about Big data.</p>
 									<p>In our case study, we will endeavor to find out the various aspects of songs which makes it stand out from the rest. We are trying to classify songs based on some of the interesting features like genre, energy, Danceability and several other cool features.</p>
                                     <p><a class="more-link" href="https://github.com/BandeepSingh/Million-Song-DataSet-Analysis" target="https://github.com/BandeepSingh/Million-Song-DataSet-Analysis"><i class="fa fa-external-link"></i> Find out more</a></p>
                                 </div><!--//desc-->
@@ -115,7 +116,7 @@
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title"><a href="#" target="_blank">CommonWealth Guide</a></h3>
-                                    <p> This application will help language barrier faced by tourists and improve the traveling experience of the tourists.</p>
+                                    <p> This application will help reduce language barrier faced by tourists and improve the traveling experience of the tourists.</p>
                                     <p><a class="more-link" href="#" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
                                 </div><!--//desc-->
                             </div><!--//item-->
@@ -134,8 +135,8 @@
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">Data Scientist <span class="place"><a href="#">PHEMI Systems</a></span> <span class="year">(2016 - 2017)</span></h3>
-                                 <p>Used Apache Zeppelin to train an unsupervised model for topic modeling using Spark’s Latent Drichlet allocation (LDA) model on a set of documents to infer most talked about topics and thereafter doing document search</p>
-								 <p>Worked on a Document simlilarity model using python’s NLTK library to find the document which is closest given a document using cosine similarity and finding the subject matter</p>
+                                 <p>Used Apache Zeppelin to train an unsupervised model for topic modeling using Spark's Latent Drichlet allocation (LDA) model on a set of documents to infer most talked about topics and thereafter doing document search</p>
+								 <p>Worked on a Document simlilarity model using python's NLTK library to find the document which is closest given a document using cosine similarity and finding the subject matter</p>
 								 <p>Working on sentiment analysis of big corpus of emails using NLTK and Stanfords NLP libraries</p>
 								 <p>Optimizing existing code to handle Big Data efficiently by understanding how data structures are implemented</p>
 							    <p>Applying pyspark and scala spark best practices while working with spark programs</p>
@@ -197,11 +198,17 @@
                                 <div class="item">
                                     <h3 class="level-title">SPARK and Hadoop<span class="level-label">Expert</span></h3>
                                     <div class="level-bar">
-                                        <div class="level-bar-inner" data-level="80%">
+                                        <div class="level-bar-inner" data-level="90%">
                                         </div>
                                     </div><!--//level-bar-->
                                 </div><!--//item-->
-
+								<div class="item">
+									<h3 class="level-title">Machine Learning<span class="level-label">Specialist</span></h3>
+									<div class="level-bar">
+										<div class="level-bar-inner" data-level="70%">
+										</div>
+									</div><!--//level-bar-->
+                                </div><!--//item-->
                                 <div class="item">
                                     <h3 class="level-title">Java<span class="level-label">Expert</span></h3>
                                     <div class="level-bar">
@@ -213,7 +220,7 @@
                                 <div class="item">
                                     <h3 class="level-title">C/C++<span class="level-label">Pro</span></h3>
                                     <div class="level-bar">
-                                        <div class="level-bar-inner" data-level="80%">
+                                        <div class="level-bar-inner" data-level="70%">
                                         </div>
                                     </div><!--//level-bar-->
                                 </div><!--//item-->
