Fixed some typos

--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@
                             </div><!--//item-->
                             <hr class="divider" />
                             <div class="item row">
-                                <a class="col-md-4 col-sm-4 col-xs-12" href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-mobile-apps-atom/" target="_blank">
                                 <img class="img-responsive project-image" src="assets/images/projects/project-5.png" alt="project name" />
-                                </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title"><a href="https://github.com/BandeepSingh/Million-Song-DataSet-Analysis" target="_blank">Analysis on Million Songs dataset</a></h3>
                                     <p>Music is not just a everyday thing, it's a part of our life. Today, we have hundreds of thousands songs to choose from and that in itself is a challenge. Music is one field that has been unexplored when we talk about Big data.</p>
@@ -99,9 +97,8 @@
                             </div><!--//item-->
 
                             <div class="item row">
-                                <a class="col-md-4 col-sm-4 col-xs-12" href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-web-development-agencies-devstudio/" target="_blank">
                                 <img class="img-responsive project-image" src="assets/images/projects/project-4.png" alt="project name" />
-                                </a>
+
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title"><a href="#" target="_blank">Online News Popularity Prediction Model</a></h3>
                                     <p>Historically news media has been the most popular means of advertisement for various business sectors. In modern days, with the advent of internet, the trend has started shifting towards digital media and with increasing internet enabled devices there has been a drift of people moving towards these new age devices for their daily dose of news.</p>
@@ -111,9 +108,7 @@
                             </div><!--//item-->
 
                             <div class="item row">
-                                <a class="col-md-4 col-sm-4 col-xs-12" href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-mobile-apps-delta/" target="_blank">
                                 <img class="img-responsive project-image" src="assets/images/projects/project-2.png" alt="project name" />
-                                </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title"><a href="#" target="_blank">CommonWealth Guide</a></h3>
                                     <p> This application will help reduce language barrier faced by tourists and improve the traveling experience of the tourists.</p>
@@ -267,7 +262,8 @@
                 <aside class="Quote aside section">
                     <div class="section-inner">
                         <h2 class="heading">Quote of the Day</h2>
-                        <p>sooner or later the man who wins Is the one who thinks he can..</p>
+                        <p><i>Sooner or later the man who wins</i></p>
+                        <p><i>Is the one who thinks he can..</i></p>
                         <div id="rss-feeds" class="content">
 
                         </div><!--//content-->
